Fixed accordion's expand and collapse arrows for accessibility

--- a/source/scss/cagov/accordion.scss
+++ b/source/scss/cagov/accordion.scss
@@ -4,8 +4,7 @@
 ----------------------------------------- */
 
 /* Adds open and closed icons to accordion */
-.accordion, .panel-group,.service-tile-content {
-
+.accordion, .panel-group, .service-tile-content {
     /* Move padding from container to the href so the entire panel is clickable */
     .panel-heading {
         padding: 0;
@@ -17,8 +16,8 @@
     }
 
     .panel-heading .panel-title {
-        margin-top: 0;           // Remove the top margin on panel groups that are responsive. e.g. tabs2accordion
-        display: block;          // Force the title and a tag to be block to make the hit box larger
+        margin-top: 0; // Remove the top margin on panel groups that are responsive. e.g. tabs2accordion
+        display: block; // Force the title and a tag to be block to make the hit box larger
         @include font-size(1.125);
 
         a {
@@ -28,26 +27,34 @@
 
             &:hover, &:focus {
                 text-decoration: none;
-				background:lighten($gray-lighter, 10%); // beta 5.0 addition
+                background: lighten($gray-lighter, 10%); // beta 5.0 addition
             }
-
             /* Adds open and closed icons to responsive tab panels */
-            &:after {
-                content: "\43";        // .ca-gov-icon-triangle-down
-                font-family: 'CaGov';
+            span[aria-hidden="true"] {
                 position: absolute;
                 right: 10px;
                 top: 50%;
                 margin-top: -11px;
                 color: $gray-light;
+
+                &:after {
+                    content: "\43"; // .ca-gov-icon-triangle-down
+                    font-family: 'CaGov';
+                }
             }
 
-            &.collapsed:after {
-                 content: "\45";       // .ca-gov-icon-triangle-right
+            &.collapsed {
+                span[aria-hidden="true"] {
+
+                    &:after {
+                        content: "\45"; // .ca-gov-icon-triangle-right
+                    }
+                }
             }
         }
     }
 }
+
 
 .accordion {
     .panel {
@@ -60,33 +67,39 @@
     }
 }
 
+
 /* list accordion */
 .accordion-list {
-	list-style: none;
-	li.tab {
-		cursor: pointer;
-		padding-bottom: 0;
-		margin-top: 13px;
-		a {
-			color: $link-color;
-			
-			&:hover {
-				color: $link-hover-color;
-				}
-			}
-	}
-	.panel {
-		padding-left: 1em;
-		margin-bottom: 10px;
-		border:none;
-	}
+    list-style: none;
+
+    li.tab {
+        cursor: pointer;
+        padding-bottom: 0;
+        margin-top: 13px;
+
+        a {
+            color: $link-color;
+
+            &:hover {
+                color: $link-hover-color;
+            }
+        }
+    }
+
+    .panel {
+        padding-left: 1em;
+        margin-bottom: 10px;
+        border: none;
+    }
 }
+
 .accordion-list.list-standout {
-	li.tab {
-		padding-left: 1em;
-		margin-top: 0;
-	}
+    li.tab {
+        padding-left: 1em;
+        margin-top: 0;
+    }
 }
+
 .accordion-list.list-understated {
-	padding-left: 0;
+    padding-left: 0;
 }
